- CHG: Updated trials data importer for ontology templates. -