@@ -2,15 +2,14 @@ package jhi.germinate.server.util.importer;
 
 import com.google.gson.*;
 import jhi.germinate.server.Database;
-import jhi.germinate.server.database.codegen.enums.PhenotypesDatatype;
-import jhi.germinate.server.database.codegen.tables.pojos.Phenotypes;
+import jhi.germinate.server.database.codegen.enums.*;
+import jhi.germinate.server.database.codegen.tables.pojos.ViewTableTraits;
 import jhi.germinate.server.database.codegen.tables.records.*;
 import jhi.germinate.server.database.pojo.*;
-import jhi.germinate.server.util.*;
+import jhi.germinate.server.util.StringUtils;
 import jhi.germinate.server.util.importer.util.GermplasmNotFoundException;
 import org.dhatim.fastexcel.reader.*;
-import org.dhatim.fastexcel.reader.Row;
-import org.jooq.*;
+import org.jooq.DSLContext;
 
 import java.io.IOException;
 import java.math.BigDecimal;
@@ -20,12 +19,15 @@ import java.util.*;
 import java.util.function.Function;
 import java.util.stream.*;
 
-import static jhi.germinate.server.database.codegen.tables.Phenotypecategories.PHENOTYPECATEGORIES;
+import static jhi.germinate.server.database.codegen.tables.Methods.METHODS;
 import static jhi.germinate.server.database.codegen.tables.Phenotypedata.PHENOTYPEDATA;
-import static jhi.germinate.server.database.codegen.tables.Phenotypes.PHENOTYPES;
+import static jhi.germinate.server.database.codegen.tables.Scales.SCALES;
+import static jhi.germinate.server.database.codegen.tables.Traitcategories.TRAITCATEGORIES;
+import static jhi.germinate.server.database.codegen.tables.Traits.TRAITS;
 import static jhi.germinate.server.database.codegen.tables.Treatments.TREATMENTS;
 import static jhi.germinate.server.database.codegen.tables.Trialsetup.TRIALSETUP;
-import static jhi.germinate.server.database.codegen.tables.Units.UNITS;
+import static jhi.germinate.server.database.codegen.tables.Variables.VARIABLES;
+import static jhi.germinate.server.database.codegen.tables.ViewTableTraits.VIEW_TABLE_TRAITS;
 
 /**
  * @author Sebastian Raubach
@@ -35,18 +37,19 @@ public class TraitDataImporter extends DatasheetImporter
 	/**
 	 * Required column headers
 	 */
-	private static final String[] COLUMN_HEADERS_TRAITS = {"Name", "Short Name", "Description", "Data Type", "Unit Name", "Unit Abbreviation", "Unit Descriptions"};
-	private static final String[] COLUMN_HEADERS_DATA   = {"Line/Phenotype", "Rep", "Block", "Row", "Column", "Treatment", "Location", "Latitude", "Longitude", "Elevation"};
+	private static final String[] COLUMN_HEADERS_TRAITS    = {"Name", "Short Name", "Description", "Data Type", "Unit Name", "Unit Abbreviation", "Unit Descriptions"};
+	private static final String[] COLUMN_HEADERS_VARIABLES = {"Variable cropontology id", "Variable name", "Variable description", "Trait cropontology id", "Trait name", "Trait description", "Trait abbreviation", "Trait class", "Trait category", "Method cropontology id", "Method name", "Method description", "Method class", "Method set size", "Method is timeseries", "Scale cropontology id", "Scale name", "Scale description", "Scale unit", "Scale data type", "Scale minimum", "Scale maximum", "Scale valid values"};
+	private static final String[] COLUMN_HEADERS_DATA      = {"Line/Phenotype", "Rep", "Block", "Row", "Column", "Treatment", "Location", "Latitude", "Longitude", "Elevation"};
 
-	private final Map<String, Integer>    traitNameToId    = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
-	private final Map<String, Integer>    treatmentToId    = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
-	private       Map<String, Integer>    traitColumnNameToIndex;
-	private       Map<String, Integer>    dataColumnNameToIndex;
-	private       Map<String, String>     rowColToGermplasm;
+	private final Map<String, Integer>         traitNameToId       = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+	private final Map<String, Integer>         treatmentToId       = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+	private       Map<String, Integer>         traitColumnNameToIndex;
+	private       Map<String, Integer>         dataColumnNameToIndex;
+	private       Map<String, String>          rowColToGermplasm;
 	/**
 	 * Used to check trait values against trait definitions during checking stage
 	 */
-	private final Map<String, Phenotypes> traitDefinitions = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+	private final Map<String, ViewTableTraits> variableDefinitions = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
 
 	private final Set<Integer> traitIds     = new HashSet<>();
 	private final Set<Integer> germplasmIds = new HashSet<>();
@@ -69,6 +72,13 @@ public class TraitDataImporter extends DatasheetImporter
 		TraitDataImporter importer = new TraitDataImporter(Integer.parseInt(args[5]));
 		importer.init(args);
 		importer.run();
+
+//		args = new String[]{"localhost", "germinate_demo", null, "root", null, "C:/Users/sr41756/germinate/demo", "C:/Users/sr41756/Downloads/example-trials-data.xlsx", RunType.CHECK_AND_IMPORT.name(), "109"};
+//		args = new String[]{"localhost", "germinate_demo", null, "root", null, "C:/Users/sr41756/germinate/demo", "C:/Users/sr41756/Downloads/example-ontologies-data.xlsx", RunType.CHECK_AND_IMPORT.name(), "109"};
+//
+//		TraitDataImporter importer = new TraitDataImporter(createImportJobFromCommandline(args, DataImportJobsDatatype.trial));
+//		importer.init(args);
+//		importer.run();
 	}
 
 	public TraitDataImporter(Integer importJobId)
@@ -86,15 +96,15 @@ public class TraitDataImporter extends DatasheetImporter
 		try (Connection conn = Database.getConnection())
 		{
 			DSLContext context = Database.getContext(conn);
-			context.selectFrom(PHENOTYPES)
-				   .forEach(p -> traitNameToId.put(p.getName(), p.getId()));
+			context.selectFrom(VARIABLES)
+			       .forEach(p -> traitNameToId.put(p.getName(), p.getId()));
 
-			context.selectFrom(PHENOTYPES)
-				   .fetchInto(Phenotypes.class)
-				   .forEach(p -> traitDefinitions.put(p.getName(), p));
+			context.selectFrom(VIEW_TABLE_TRAITS)
+			       .fetchInto(ViewTableTraits.class)
+			       .forEach(p -> variableDefinitions.put(p.getVariableName(), p));
 
 			context.selectFrom(TREATMENTS)
-				   .forEach(t -> treatmentToId.put(t.getName(), t.getId()));
+			       .forEach(t -> treatmentToId.put(t.getName(), t.getId()));
 		}
 		catch (SQLException e)
 		{
@@ -111,25 +121,50 @@ public class TraitDataImporter extends DatasheetImporter
 		try
 		{
 			wb.getSheets()
-			  .filter(s -> Objects.equals(s.getName(), "PHENOTYPES"))
+			  .filter(s -> Objects.equals(s.getName(), "TRAITS"))
 			  .findFirst()
-			  .ifPresent(s ->
+			  .ifPresentOrElse(s ->
 			  {
+				  // New ontology sheet found!
 				  try
 				  {
 					  // Map headers to their index
 					  s.openStream()
+					   .skip(2)
 					   .findFirst()
-					   .ifPresent(this::getTraitHeaderMapping);
+					   .ifPresent(this::getVariableHeaderMapping);
 					  // Check the sheet
 					  s.openStream()
-					   .skip(1)
-					   .forEachOrdered(this::checkTrait);
+					   .skip(3)
+					   .forEachOrdered(this::checkVariable);
 				  }
 				  catch (IOException e)
 				  {
 					  addImportResult(ImportStatus.GENERIC_IO_ERROR, -1, e.getMessage());
 				  }
+			  }, () -> {
+				  wb.getSheets()
+				    .filter(s -> Objects.equals(s.getName(), "PHENOTYPES"))
+				    .findFirst()
+				    .ifPresent(s ->
+					{
+						// Fall back to old traits sheet
+						try
+						{
+							// Map headers to their index
+							s.openStream()
+						     .findFirst()
+						     .ifPresent(this::getTraitHeaderMapping);
+							// Check the sheet
+							s.openStream()
+						     .skip(1)
+						     .forEachOrdered(this::checkTrait);
+						}
+						catch (IOException e)
+						{
+							addImportResult(ImportStatus.GENERIC_IO_ERROR, -1, e.getMessage());
+						}
+					});
 			  });
 
 			this.locationNames = checkLocationSheet(wb.findSheet("LOCATION").orElse(null));
@@ -141,7 +176,7 @@ public class TraitDataImporter extends DatasheetImporter
 		catch (NullPointerException e)
 		{
 			e.printStackTrace();
-			addImportResult(ImportStatus.GENERIC_MISSING_EXCEL_SHEET, -1, "'PHENOTYPES' sheet not found");
+			addImportResult(ImportStatus.GENERIC_MISSING_EXCEL_SHEET, -1, "Generic error: " + e.getMessage());
 		}
 	}
 
@@ -152,18 +187,8 @@ public class TraitDataImporter extends DatasheetImporter
 			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Line/Phenotype' column not found");
 		if (!dataColumnNameToIndex.containsKey("Rep"))
 			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Rep' column not found");
-//		if (!dataColumnNameToIndex.containsKey("Block"))
-//			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Block' column not found");
 		if (!dataColumnNameToIndex.containsKey("Treatment"))
 			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Treatment' column not found");
-//		if (!dataColumnNameToIndex.containsKey("Location"))
-//			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Location' column not found");
-//		if (!dataColumnNameToIndex.containsKey("Latitude"))
-//			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Latitude' column not found");
-//		if (!dataColumnNameToIndex.containsKey("Longitude"))
-//			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Longitude' column not found");
-//		if (!dataColumnNameToIndex.containsKey("Elevation"))
-//			addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, 0, "'Elevation' column not found");
 	}
 
 	private void checkDataAndRecordingDates(Sheet data, Sheet dates)
@@ -179,51 +204,51 @@ public class TraitDataImporter extends DatasheetImporter
 			}
 
 			data.openStream()
-				.findFirst()
-				.ifPresent(this::getDataHeaderMapping);
+			    .findFirst()
+			    .ifPresent(this::getDataHeaderMapping);
 
 			data.openStream()
-				.findFirst()
-				.ifPresent(this::checkPredefinedHeaders);
+			    .findFirst()
+			    .ifPresent(this::checkPredefinedHeaders);
 
 			// Check trait names in data sheet against database and phenotypes sheet
 			data.openStream()
-				.findFirst()
-				.ifPresent(this::checkTraitNames);
+			    .findFirst()
+			    .ifPresent(this::checkTraitNames);
 			// Check germplasm names in data sheet against the database
 			data.openStream()
-				.skip(1)
-				.forEachOrdered(this::checkGermplasmNameAndRep);
+			    .skip(1)
+			    .forEachOrdered(this::checkGermplasmNameAndRep);
 
 			data.openStream()
-				.skip(1)
-				.forEachOrdered(this::checkLocationName);
+			    .skip(1)
+			    .forEachOrdered(this::checkLocationName);
 
 			data.openStream()
-				.skip(1)
-				.forEachOrdered(this::checkGpsInformation);
+			    .skip(1)
+			    .forEachOrdered(this::checkGpsInformation);
 
 			data.openStream()
-				.skip(1)
-				.forEachOrdered(this::checkRowColumn);
+			    .skip(1)
+			    .forEachOrdered(this::checkRowColumn);
 
 			checkData(data);
 
 			if (dates != null)
 			{
 				dates.openStream()
-					 .findFirst()
-					 .ifPresent(this::checkPredefinedHeaders);
+				     .findFirst()
+				     .ifPresent(this::checkPredefinedHeaders);
 
 				// Check trait names in dates sheet against database and phenotypes sheet
 				dates.openStream()
-					 .findFirst()
-					 .ifPresent(this::checkTraitNames);
+				     .findFirst()
+				     .ifPresent(this::checkTraitNames);
 
 				// Check germplasm names in dates sheet against the database
 				dates.openStream()
-					 .skip(1)
-					 .forEachOrdered(this::checkGermplasmNameAndRep);
+				     .skip(1)
+				     .forEachOrdered(this::checkGermplasmNameAndRep);
 
 				List<Row> dataRows = data.read();
 				List<Row> datesRows = dates.read();
@@ -431,7 +456,7 @@ public class TraitDataImporter extends DatasheetImporter
 		for (int i = this.traitColumnStartIndex; i < r.getCellCount(); i++)
 		{
 			String traitName = getCellValue(r, i);
-			if (!StringUtils.isEmpty(traitName) && !traitDefinitions.containsKey(traitName))
+			if (!StringUtils.isEmpty(traitName) && !variableDefinitions.containsKey(traitName))
 			{
 				addImportResult(ImportStatus.TRIALS_MISSING_TRAIT_DECLARATION, 0, traitName);
 			}
@@ -442,28 +467,28 @@ public class TraitDataImporter extends DatasheetImporter
 	{
 		// Map column names to their index
 		dataColumnNameToIndex = IntStream.range(0, r.getCellCount())
-										 .filter(i -> !cellEmpty(r, i))
-										 .boxed()
-										 .collect(Collectors.toMap(r::getCellText, Function.identity()));
+		                                 .filter(i -> !cellEmpty(r, i))
+		                                 .boxed()
+		                                 .collect(Collectors.toMap(r::getCellText, Function.identity()));
 
 		traitColumnStartIndex = (int) Arrays.stream(COLUMN_HEADERS_DATA)
-											.filter(h -> dataColumnNameToIndex.containsKey(h))
-											.count();
+		                                    .filter(h -> dataColumnNameToIndex.containsKey(h))
+		                                    .count();
 	}
 
-	private void getTraitHeaderMapping(Row r)
+	private void getVariableHeaderMapping(Row r)
 	{
 		try
 		{
 			// Map column names to their index
 			traitColumnNameToIndex = IntStream.range(0, r.getCellCount())
-											  .filter(i -> !cellEmpty(r, i))
-											  .boxed()
-											  .collect(Collectors.toMap(r::getCellText, Function.identity()));
+			                                  .filter(i -> !cellEmpty(r, i))
+			                                  .boxed()
+			                                  .collect(Collectors.toMap(r::getCellText, Function.identity()));
 
 			// Check if all columns are there
-			Arrays.stream(COLUMN_HEADERS_TRAITS)
-				  .forEach(c ->
+			Arrays.stream(COLUMN_HEADERS_VARIABLES)
+			      .forEach(c ->
 				  {
 					  if (!traitColumnNameToIndex.containsKey(c))
 						  addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, -1, c);
@@ -473,6 +498,336 @@ public class TraitDataImporter extends DatasheetImporter
 		{
 			addImportResult(ImportStatus.GENERIC_DUPLICATE_COLUMN, 1, e.getMessage());
 		}
+	}
+
+	private void getTraitHeaderMapping(Row r)
+	{
+		try
+		{
+			// Map column names to their index
+			traitColumnNameToIndex = IntStream.range(0, r.getCellCount())
+			                                  .filter(i -> !cellEmpty(r, i))
+			                                  .boxed()
+			                                  .collect(Collectors.toMap(r::getCellText, Function.identity()));
+
+			// Check if all columns are there
+			Arrays.stream(COLUMN_HEADERS_TRAITS)
+			      .forEach(c ->
+				  {
+					  if (!traitColumnNameToIndex.containsKey(c))
+						  addImportResult(ImportStatus.GENERIC_MISSING_COLUMN, -1, c);
+				  });
+		}
+		catch (IllegalStateException e)
+		{
+			addImportResult(ImportStatus.GENERIC_DUPLICATE_COLUMN, 1, e.getMessage());
+		}
+	}
+
+	/**
+	 * Finds the best matching existing scale for a newly submitted scale,
+	 * updates its min/max bounds, and extends its allowedValues if needed.
+	 *
+	 * @param newScale   the incoming scale to reconcile
+	 * @param candidates pre-filtered list of potential matches (by name/description/unit etc.)
+	 * @return the best-matching existing scale (mutated in place), or null if no acceptable match is found
+	 */
+	public ScalesRecord findBestMatchAndMerge(ScalesRecord newScale, List<ScalesRecord> candidates)
+	{
+		if (candidates == null || candidates.isEmpty())
+		{
+			return null;
+		}
+
+		ScalesRecord bestMatch = null;
+		double bestScore = -1;
+
+		for (ScalesRecord candidate : candidates)
+		{
+			double score = computeCompatibilityScore(newScale, candidate);
+			if (score > bestScore)
+			{
+				bestScore = score;
+				bestMatch = candidate;
+			}
+		}
+
+		// Reject if compatibility is too low (tune this threshold to your needs)
+		if (bestMatch == null || bestScore < 0.5)
+		{
+			return null;
+		}
+
+		mergeInto(bestMatch, newScale);
+		return bestMatch;
+	}
+
+	/**
+	 * Scores how compatible a candidate scale is with the new scale.
+	 * Returns a value in [0.0, 1.0]. Higher is better.
+	 * <p>
+	 * Four possible restriction combinations are handled:
+	 * - Both have restrictions:    scored normally (range + allowedValues)
+	 * - Neither has restrictions:  neutral full score (1.0) — both are unrestricted
+	 * - Only one has restrictions: low score (0.1) — structurally mismatched
+	 */
+	private double computeCompatibilityScore(ScalesRecord newScale, ScalesRecord candidate)
+	{
+		TraitRestrictions newR = newScale.getRestrictions();
+		TraitRestrictions candR = candidate.getRestrictions();
+
+		// Neither has restrictions — structurally identical, other fields (name/unit etc.) already matched
+		if (newR == null && candR == null)
+		{
+			return 1.0;
+		}
+
+		// One has restrictions and the other doesn't — structural mismatch, very unlikely to be the same scale
+		if (newR == null || candR == null)
+		{
+			return 0.1;
+		}
+
+		// Both have restrictions — score on range and allowedValues
+		double score = 0.0;
+
+		// --- Numeric range compatibility (weight: 0.4) ---
+		boolean newHasRange = newR.getMin() != null && newR.getMax() != null;
+		boolean candHasRange = candR.getMin() != null && candR.getMax() != null;
+
+		if (newHasRange && candHasRange)
+		{
+			double newMin = newR.getMin(), newMax = newR.getMax();
+			double candMin = candR.getMin(), candMax = candR.getMax();
+
+			// Completely disjoint ranges — almost certainly not the same scale
+			if (newMax < candMin || newMin > candMax)
+			{
+				return 0.0;
+			}
+
+			double overlapSize = Math.min(newMax, candMax) - Math.max(newMin, candMin);
+			double unionSize = Math.max(newMax, candMax) - Math.min(newMin, candMin);
+			score += 0.4 * (unionSize > 0 ? overlapSize / unionSize : 1.0);
+
+		}
+		else if (!newHasRange && !candHasRange)
+		{
+			score += 0.2; // Neither is numeric — neutral partial credit
+		}
+		// If only one side has a range, give 0 for this component
+
+		// --- AllowedValues overlap (weight: 0.6) ---
+		String[][] newVals  = newR.getCategories();
+		String[][] candVals = candR.getCategories();
+
+		boolean newHasVals  = newVals  != null && newVals.length  > 0;
+		boolean candHasVals = candVals != null && candVals.length > 0;
+
+		if (newHasVals && candHasVals) {
+			score += 0.6 * computeAllowedValuesSimilarity(newVals, candVals);
+		} else if (!newHasVals && !candHasVals) {
+			score += 0.3;
+		}
+		// If only one side has allowedValues, give 0 for this component
+
+		return score;
+	}
+
+	/**
+	 * Scores the similarity between two allowedValues arrays.
+	 * Uses best-match Jaccard similarity on inner arrays rather than requiring exact equality,
+	 * so e.g. ["2","6","intermediate"] and ["2","6"] are recognised as similar (score: 2/3 ≈ 0.67).
+	 */
+	private double computeAllowedValuesSimilarity(String[][] newVals, String[][] candVals) {
+		Set<Set<String>> newSets  = toLevelSets(newVals);
+		Set<Set<String>> candSets = toLevelSets(candVals);
+
+		// For each level in the new scale, find the best-matching level in the candidate
+		double totalScore = 0.0;
+		for (Set<String> newLevel : newSets) {
+			double bestLevelScore = candSets.stream()
+			                                .mapToDouble(candLevel -> jaccardSimilarity(newLevel, candLevel))
+			                                .max()
+			                                .orElse(0.0);
+			totalScore += bestLevelScore;
+		}
+
+		// Normalise by the larger of the two level counts (penalises missing/extra levels)
+		double normalised = totalScore / Math.max(newSets.size(), candSets.size());
+		return normalised;
+	}
+
+	/**
+	 * Jaccard similarity between two sets: |intersection| / |union|.
+	 */
+	private double jaccardSimilarity(Set<String> a, Set<String> b) {
+		if (a.isEmpty() && b.isEmpty()) return 1.0;
+
+		long intersection = a.stream().filter(b::contains).count();
+		long union = a.size() + b.size() - intersection;
+		return union > 0 ? (double) intersection / union : 0.0;
+	}
+
+	/**
+	 * Converts a String[][] into a Set of Sets for order-insensitive level comparison.
+	 * Each inner String[] represents one "level" (e.g. synonyms for a single value).
+	 */
+	private Set<Set<String>> toLevelSets(String[][] values)
+	{
+		return Arrays.stream(values)
+		             .map(level -> Arrays.stream(level)
+		                                 .map(String::toLowerCase)
+		                                 .map(String::trim)
+		                                 .collect(Collectors.toSet()))
+		             .collect(Collectors.toSet());
+	}
+
+	/**
+	 * Merges the new scale's restriction data into the existing (matched) scale:
+	 * 1. Expands numeric min/max if the new scale extends the range.
+	 * 2. Appends any allowedValues levels not already present.
+	 * <p>
+	 * If the new scale has no restrictions, there is nothing to merge.
+	 * If the existing scale has no restrictions, they are created from the new scale's values.
+	 */
+	private void mergeInto(ScalesRecord existing, ScalesRecord newScale)
+	{
+		TraitRestrictions newR = newScale.getRestrictions();
+		if (newR == null)
+		{
+			return; // Nothing to merge
+		}
+
+		// Initialise restrictions on the existing record if absent
+		TraitRestrictions existingR = existing.getRestrictions();
+		if (existingR == null)
+		{
+			existingR = new TraitRestrictions();
+			existing.setRestrictions(existingR);
+		}
+
+		// --- Expand numeric range ---
+		if (newR.getMin() != null)
+		{
+			existingR.setMin(existingR.getMin() == null
+					? newR.getMin()
+					: Math.min(existingR.getMin(), newR.getMin()));
+		}
+		if (newR.getMax() != null)
+		{
+			existingR.setMax(existingR.getMax() == null
+					? newR.getMax()
+					: Math.max(existingR.getMax(), newR.getMax()));
+		}
+
+		// --- Extend allowedValues with genuinely new levels ---
+		String[][] newVals = newR.getCategories();
+		if (newVals == null || newVals.length == 0)
+		{
+			return;
+		}
+
+		String[][] existingVals = existingR.getCategories();
+		List<String[]> merged = (existingVals != null)
+				? new ArrayList<>(Arrays.asList(existingVals))
+				: new ArrayList<>();
+
+		for (String[] newLevel : newVals) {
+			Set<String> newNormalised = Arrays.stream(newLevel)
+			                                  .map(String::toLowerCase)
+			                                  .map(String::trim)
+			                                  .collect(Collectors.toSet());
+
+			// Find the best-matching existing level (if any)
+			int bestMatchIndex = -1;
+			double bestMatchScore = 0.0;
+			for (int i = 0; i < merged.size(); i++) {
+				Set<String> existingNormalised = Arrays.stream(merged.get(i))
+				                                       .map(String::toLowerCase)
+				                                       .map(String::trim)
+				                                       .collect(Collectors.toSet());
+				double similarity = jaccardSimilarity(existingNormalised, newNormalised);
+				if (similarity >= 0.5 && similarity > bestMatchScore) {
+					bestMatchScore = similarity;
+					bestMatchIndex = i;
+				}
+			}
+
+			if (bestMatchIndex >= 0) {
+				// Merge: union of both levels, preserving original casing from each side
+				Set<String> existingNormalised = Arrays.stream(merged.get(bestMatchIndex))
+				                                       .map(String::toLowerCase)
+				                                       .map(String::trim)
+				                                       .collect(Collectors.toSet());
+
+				List<String> union = new ArrayList<>(Arrays.asList(merged.get(bestMatchIndex)));
+				for (String newValue : newLevel) {
+					if (!existingNormalised.contains(newValue.toLowerCase().trim())) {
+						union.add(newValue);
+					}
+				}
+				merged.set(bestMatchIndex, union.toArray(new String[0]));
+			} else {
+				// Genuinely new level — append it
+				merged.add(newLevel);
+			}
+		}
+
+		existingR.setCategories(merged.toArray(new String[0][]));
+		// Store back so jOOQ realises it has updated
+		existing.setRestrictions(existingR);
+	}
+
+	private void checkVariable(Row r)
+	{
+		if (allCellsEmpty(r))
+			return;
+
+		String name = getCellValue(r, traitColumnNameToIndex.get("Variable name"));
+
+		if (StringUtils.isEmpty(name))
+			return;
+
+		ImportVariable variable = new ImportVariable(false);
+		variable.ontologyId = getCellValue(r, traitColumnNameToIndex.get("Variable cropontology id"));
+		variable.name = getCellValue(r, traitColumnNameToIndex.get("Variable name"));
+		variable.description = getCellValue(r, traitColumnNameToIndex.get("Variable description"));
+
+		ImportTrait trait = new ImportTrait(false);
+		trait.ontologyId = getCellValue(r, traitColumnNameToIndex.get("Trait cropontology id"));
+		trait.name = getCellValue(r, traitColumnNameToIndex.get("Trait name"));
+		trait.description = getCellValue(r, traitColumnNameToIndex.get("Trait description"));
+		trait.abbreviation = getCellValue(r, traitColumnNameToIndex.get("Trait abbreviation"));
+		trait.clazz = getCellValue(r, traitColumnNameToIndex.get("Trait class"));
+		trait.category = getCellValue(r, traitColumnNameToIndex.get("Trait category"));
+
+		ImportMethod method = new ImportMethod(false);
+		method.ontologyId = getCellValue(r, traitColumnNameToIndex.get("Method cropontology id"));
+		method.name = getCellValue(r, traitColumnNameToIndex.get("Method name"));
+		method.description = getCellValue(r, traitColumnNameToIndex.get("Method description"));
+		method.clazz = getCellValue(r, traitColumnNameToIndex.get("Method class"));
+		method.setSize = getCellValue(r, traitColumnNameToIndex.get("Method set size"));
+		method.isTimeseries = getCellValue(r, traitColumnNameToIndex.get("Method is timeseries"));
+
+		ImportScale scale = new ImportScale(false);
+		scale.ontologyId = getCellValue(r, traitColumnNameToIndex.get("Scale cropontology id"));
+		scale.name = getCellValue(r, traitColumnNameToIndex.get("Scale name"));
+		scale.description = getCellValue(r, traitColumnNameToIndex.get("Scale description"));
+		scale.unit = getCellValue(r, traitColumnNameToIndex.get("Scale unit"));
+		scale.dataType = getCellValue(r, traitColumnNameToIndex.get("Scale data type"));
+		scale.minimum = getCellValue(r, traitColumnNameToIndex.get("Scale minimum"));
+		scale.maximum = getCellValue(r, traitColumnNameToIndex.get("Scale maximum"));
+		scale.validValues = getCellValue(r, traitColumnNameToIndex.get("Scale valid values"));
+
+		ViewTableTraits container = new ViewTableTraits();
+		// Check all fields for validity
+		variable.check(r, container);
+		trait.check(r, container);
+		method.check(r, container);
+		scale.check(r, container);
+
+		variableDefinitions.put(name, container);
 	}
 
 	private void checkTrait(Row r)
@@ -485,148 +840,40 @@ public class TraitDataImporter extends DatasheetImporter
 		if (StringUtils.isEmpty(name))
 			return;
 
-		String description = getCellValue(r, traitColumnNameToIndex.get("Description"));
-		String shortName = getCellValue(r, traitColumnNameToIndex.get("Short Name"));
-		String dataType = getCellValue(r, traitColumnNameToIndex.get("Data Type"));
-		String unitAbbr = getCellValue(r, traitColumnNameToIndex.get("Unit Abbreviation"));
-		String unitName = getCellValue(r, traitColumnNameToIndex.get("Unit Name"));
-		String categories = getCellValue(r, traitColumnNameToIndex.get("Trait categories (comma separated)"));
-		String minimum = getCellValue(r, traitColumnNameToIndex.get("Min (only for numeric traits)"));
-		String maximum = getCellValue(r, traitColumnNameToIndex.get("Max (only for numeric traits)"));
-		String setSize = getCellValue(r, traitColumnNameToIndex.get("Set Size"));
-		String isTimeseries = getCellValue(r, traitColumnNameToIndex.get("Is timeseries"));
+		ImportVariable variable = new ImportVariable(true);
+		variable.name = getCellValue(r, traitColumnNameToIndex.get("Name"));
+		variable.description = getCellValue(r, traitColumnNameToIndex.get("Description"));
 
-		TraitRestrictions restrictions = null;
+		ImportTrait trait = new ImportTrait(true);
+		trait.name = getCellValue(r, traitColumnNameToIndex.get("Name"));
+		trait.description = getCellValue(r, traitColumnNameToIndex.get("Description"));
+		trait.abbreviation = getCellValue(r, traitColumnNameToIndex.get("Short Name"));
+		trait.clazz = "other";
+		trait.category = getCellValue(r, traitColumnNameToIndex.get("Trait category"));
 
-		if (StringUtils.isEmpty(name))
-			addImportResult(ImportStatus.GENERIC_MISSING_REQUIRED_VALUE, r.getRowNum(), "Name: " + name);
+		ImportMethod method = new ImportMethod(true);
+		method.name = "Measurement";
+		method.clazz = "measurement";
+		method.setSize = getCellValue(r, traitColumnNameToIndex.get("Set size"));
+		method.isTimeseries = getCellValue(r, traitColumnNameToIndex.get("Is timeseries"));
 
-		if (!StringUtils.isEmpty(shortName) && shortName.length() > 10)
-			addImportResult(ImportStatus.GENERIC_VALUE_TOO_LONG, r.getRowNum(), "Short name: " + shortName + " exceeds 10 characters.");
+		ImportScale scale = new ImportScale(true);
+		scale.name = StringUtils.coalesce(getCellValue(r, traitColumnNameToIndex.get("Unit Name")), getCellValue(r, traitColumnNameToIndex.get("Name")), "N/A");
+		scale.description = StringUtils.coalesce(getCellValue(r, traitColumnNameToIndex.get("Unit Descriptions")), getCellValue(r, traitColumnNameToIndex.get("Description")));
+		scale.unit = StringUtils.coalesce(getCellValue(r, traitColumnNameToIndex.get("Unit Abbreviation")), getCellValue(r, traitColumnNameToIndex.get("Short name")));
+		scale.dataType = getCellValue(r, traitColumnNameToIndex.get("Data Type"));
+		scale.minimum = getCellValue(r, traitColumnNameToIndex.get("Min (only for numeric traits)"));
+		scale.maximum = getCellValue(r, traitColumnNameToIndex.get("Max (only for numeric traits)"));
+		scale.validValues = getCellValue(r, traitColumnNameToIndex.get("Trait categories (comma separated)"));
 
-		if (!StringUtils.isEmpty(name) && name.length() > 255)
-			addImportResult(ImportStatus.GENERIC_VALUE_TOO_LONG, r.getRowNum(), "Name: " + name + " exceeds 255 characters.");
+		ViewTableTraits container = new ViewTableTraits();
+		// Check all fields for validity
+		variable.check(r, container);
+		trait.check(r, container);
+		method.check(r, container);
+		scale.check(r, container);
 
-		if (!StringUtils.isEmpty(unitName) && unitName.length() > 255)
-			addImportResult(ImportStatus.GENERIC_VALUE_TOO_LONG, r.getRowNum(), "Unit Name: " + unitName + " exceeds 255 characters.");
-
-		if (!StringUtils.isEmpty(setSize))
-		{
-			try
-			{
-				Integer.parseInt(minimum);
-			}
-			catch (NumberFormatException e)
-			{
-				addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Set size isn't a valid number: " + setSize);
-			}
-		}
-
-		if (!StringUtils.isEmpty(isTimeseries))
-		{
-			if (!validPositiveBoolean.contains(isTimeseries.toLowerCase()) && !validNegativeBoolean.contains(isTimeseries.toLowerCase()))
-				addImportResult(ImportStatus.GENERIC_INVALID_BOOLEAN, r.getRowNum(), "Is timeseries flag isn't a valid boolean: " + isTimeseries);
-		}
-
-		PhenotypesDatatype dt;
-		try
-		{
-			dt = getDataType(dataType);
-		}
-		catch (Exception e)
-		{
-			dt = PhenotypesDatatype.text;
-			addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_DATATYPE, r.getRowNum(), "Data Type: " + dataType);
-		}
-
-		if (!StringUtils.isEmpty(unitAbbr) && unitAbbr.length() > 10)
-			addImportResult(ImportStatus.GENERIC_VALUE_TOO_LONG, r.getRowNum(), "Unit Abbreviation: " + unitAbbr + " exceeds 10 characters.");
-
-		if (!StringUtils.isEmpty(categories))
-		{
-			try
-			{
-				// Try to parse it
-				String[][] cats = new Gson().fromJson(categories, String[][].class);
-
-				if (cats != null && cats.length > 1)
-				{
-					for (int i = 1; i < cats.length; i++)
-					{
-						if (cats[i - 1].length != cats[i].length)
-						{
-							addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_CATEGORIES, r.getRowNum(), "Trait categories: " + categories + " has invalid format.");
-						}
-					}
-
-					restrictions = new TraitRestrictions();
-					restrictions.setCategories(cats);
-				}
-			}
-			catch (JsonSyntaxException | NullPointerException e)
-			{
-				String[] cats = Arrays.stream(categories.split(",")).filter(c -> !StringUtils.isEmpty(c)).map(String::trim).toArray(String[]::new);
-
-				if (cats.length > 1)
-				{
-					restrictions = new TraitRestrictions();
-					restrictions.setCategories(new String[][]{cats});
-				}
-				else
-				{
-					e.printStackTrace();
-					addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_CATEGORIES, r.getRowNum(), "Trait categories: " + categories + " has invalid format.");
-				}
-			}
-		}
-
-		if (!StringUtils.isEmpty(minimum))
-		{
-			try
-			{
-				double min = Double.parseDouble(minimum);
-
-				if (restrictions == null)
-					restrictions = new TraitRestrictions();
-				restrictions.setMin(min);
-			}
-			catch (NumberFormatException e)
-			{
-				addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Minimum isn't a valid number: " + minimum);
-			}
-		}
-
-		if (!StringUtils.isEmpty(maximum))
-		{
-			try
-			{
-				double max = Double.parseDouble(maximum);
-
-				if (restrictions == null)
-					restrictions = new TraitRestrictions();
-				restrictions.setMax(max);
-			}
-			catch (NumberFormatException e)
-			{
-				addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Maximum isn't a valid number: " + maximum);
-			}
-		}
-
-		// Remember the name, cause we need to check the data sheets against them
-		Phenotypes trait = null;
-		try
-		{
-			trait = new Phenotypes();
-			trait.setName(name);
-			trait.setShortName(shortName);
-			trait.setDescription(description);
-			trait.setDatatype(dt);
-			trait.setRestrictions(restrictions);
-		}
-		catch (Exception e)
-		{
-		}
-		traitDefinitions.put(name, trait);
+		variableDefinitions.put(name, container);
 	}
 
 	private void checkData(Sheet s)
@@ -635,18 +882,18 @@ public class TraitDataImporter extends DatasheetImporter
 		{
 			// Get the header row
 			Row headers = s.openStream()
-						   .findFirst()
-						   .orElse(null);
+			               .findFirst()
+			               .orElse(null);
 
 			if (headers != null)
 			{
 				// Get the data type for each column
-				List<PhenotypesDatatype> dataTypes = headers.stream()
-															.skip(this.traitColumnStartIndex)
-															.map(this::getCellValue)
-															.filter(c -> !StringUtils.isEmpty(c) && traitDefinitions.containsKey(c))
-															.map(c -> traitDefinitions.get(c).getDatatype())
-															.collect(Collectors.toList());
+				List<ViewTableTraitsScaleDatatype> dataTypes = headers.stream()
+				                                                      .skip(this.traitColumnStartIndex)
+				                                                      .map(this::getCellValue)
+				                                                      .filter(c -> !StringUtils.isEmpty(c) && variableDefinitions.containsKey(c))
+				                                                      .map(c -> variableDefinitions.get(c).getScaleDatatype())
+				                                                      .toList();
 
 				// Now check them to make sure their content fits the data type
 				s.openStream()
@@ -686,11 +933,11 @@ public class TraitDataImporter extends DatasheetImporter
 				 });
 
 				// Get all the traits that have restrictions
-				List<String> traitsWithRestrictions = traitDefinitions.values().stream()
-																	  .filter(t -> !StringUtils.isEmpty(t.getName()))
-																	  .filter(t -> t.getRestrictions() != null && (t.getDatatype() == PhenotypesDatatype.numeric || t.getDatatype() == PhenotypesDatatype.categorical))
-																	  .map(Phenotypes::getName)
-																	  .toList();
+				List<String> traitsWithRestrictions = variableDefinitions.values().stream()
+				                                                         .filter(t -> !StringUtils.isEmpty(t.getVariableName()))
+				                                                         .filter(t -> t.getScaleRestrictions() != null && (t.getScaleDatatype() == ViewTableTraitsScaleDatatype.numeric || t.getScaleDatatype() == ViewTableTraitsScaleDatatype.categorical))
+				                                                         .map(ViewTableTraits::getVariableName)
+				                                                         .toList();
 
 				if (!traitsWithRestrictions.isEmpty())
 				{
@@ -708,7 +955,7 @@ public class TraitDataImporter extends DatasheetImporter
 							 if (index == null)
 								 return;
 
-							 TraitRestrictions restrictions = traitDefinitions.get(t).getRestrictions();
+							 TraitRestrictions restrictions = variableDefinitions.get(t).getScaleRestrictions();
 							 String cellValue = getCellValue(r, index);
 
 							 if (StringUtils.isEmpty(cellValue))
@@ -780,7 +1027,7 @@ public class TraitDataImporter extends DatasheetImporter
 								 }
 
 								 if (!found)
-									 addImportResult(ImportStatus.TRIALS_DATA_VIOLATES_RESTRICTION, r.getRowNum(), "Cell value not within valid category range: " + cellValue + " not in " + traitDefinitions.get(t));
+									 addImportResult(ImportStatus.TRIALS_DATA_VIOLATES_RESTRICTION, r.getRowNum(), "Cell value not within valid category range: " + cellValue + " not in " + variableDefinitions.get(t));
 							 }
 						 });
 					 });
@@ -801,25 +1048,52 @@ public class TraitDataImporter extends DatasheetImporter
 		try (Connection conn = Database.getConnection())
 		{
 			DSLContext context = Database.getContext(conn);
-			wb.findSheet("PHENOTYPES")
-			  .ifPresent(s -> {
+
+			wb.getSheets()
+			  .filter(s -> Objects.equals(s.getName(), "TRAITS"))
+			  .findFirst()
+			  .ifPresentOrElse(s ->
+			  {
+				  // New ontology sheet found!
 				  try
 				  {
 					  // Map headers to their index
 					  s.openStream()
+					   .skip(2)
 					   .findFirst()
-					   .ifPresent(this::getTraitHeaderMapping);
-					  // Check the sheet to get the trait mapping
+					   .ifPresent(this::getVariableHeaderMapping);
+					  // Check the sheet
 					  s.openStream()
-					   .skip(1)
-					   .forEachOrdered(this::checkTrait);
+					   .skip(3)
+					   .forEachOrdered(this::checkVariable);
 				  }
 				  catch (IOException e)
 				  {
 					  addImportResult(ImportStatus.GENERIC_IO_ERROR, -1, e.getMessage());
 				  }
 
-				  importTraits(context, s);
+				  importTraits(context, s, "Variable name");
+			  }, () -> {
+				  wb.findSheet("PHENOTYPES")
+				    .ifPresent(s -> {
+						try
+						{
+							// Map headers to their index
+							s.openStream()
+						     .findFirst()
+						     .ifPresent(this::getTraitHeaderMapping);
+							// Check the sheet to get the trait mapping
+							s.openStream()
+						     .skip(2)
+						     .forEachOrdered(this::checkTrait);
+						}
+						catch (IOException e)
+						{
+							addImportResult(ImportStatus.GENERIC_IO_ERROR, -1, e.getMessage());
+						}
+
+						importTraits(context, s, "Name");
+					});
 			  });
 
 			wb.findSheet("DATA")
@@ -889,7 +1163,7 @@ public class TraitDataImporter extends DatasheetImporter
 
 	}
 
-	private void importTraits(DSLContext context, Sheet s)
+	private void importTraits(DSLContext context, Sheet s, String nameKey)
 	{
 		try
 		{
@@ -899,195 +1173,120 @@ public class TraitDataImporter extends DatasheetImporter
 				 if (allCellsEmpty(r))
 					 return;
 
-				 String name = getCellValue(r, traitColumnNameToIndex.get("Name"));
+				 String name = getCellValue(r, traitColumnNameToIndex.get(nameKey));
 
 				 if (StringUtils.isEmpty(name))
 					 return;
 
-				 String shortName = getCellValue(r, traitColumnNameToIndex.get("Short Name"));
-				 String description = getCellValue(r, traitColumnNameToIndex.get("Description"));
-				 String dataTypeString = getCellValue(r, traitColumnNameToIndex.get("Data Type"));
-				 String categoryString = getCellValue(r, traitColumnNameToIndex.get("Trait category"));
-				 PhenotypesDatatype dataType = PhenotypesDatatype.text;
-				 if (!StringUtils.isEmpty(dataTypeString))
+				 ViewTableTraits container = variableDefinitions.get(name);
+
+				 if (container == null)
+					 return;
+
+				 List<ScalesRecord> potential = context.selectFrom(SCALES)
+				                                       .where(SCALES.NAME.isNotDistinctFrom(container.getScaleName()))
+				                                       .and(SCALES.DATATYPE.isNotDistinctFrom(ScalesDatatype.lookupLiteral(container.getScaleDatatype().getLiteral())))
+				                                       .and(SCALES.DESCRIPTION.isNotDistinctFrom(container.getScaleDescription()))
+				                                       .and(SCALES.UNIT.isNotDistinctFrom(container.getScaleUnit()))
+				                                       .fetchInto(ScalesRecord.class);
+
+				 ScalesRecord scale = context.newRecord(SCALES);
+				 scale.setName(container.getScaleName());
+				 scale.setDescription(container.getScaleDescription());
+				 scale.setUnit(container.getScaleUnit());
+				 scale.setDatatype(ScalesDatatype.lookupLiteral(container.getScaleDatatype().getLiteral()));
+				 scale.setRestrictions(container.getScaleRestrictions());
+
+				 ScalesRecord bestMatch = findBestMatchAndMerge(scale, potential);
+
+				 if (bestMatch == null)
 				 {
-					 try
-					 {
-						 dataType = getDataType(dataTypeString);
-					 }
-					 catch (IllegalArgumentException e)
-					 {
-					 }
-				 }
-
-				 String unitName = getCellValue(r, traitColumnNameToIndex.get("Unit Name"));
-				 String unitAbbr = getCellValue(r, traitColumnNameToIndex.get("Unit Abbreviation"));
-				 String unitDescription = getCellValue(r, traitColumnNameToIndex.get("Unit Descriptions"));
-
-				 UnitsRecord unit = context.selectFrom(UNITS)
-										   .where(UNITS.UNIT_NAME.isNotDistinctFrom(unitName))
-										   .and(UNITS.UNIT_DESCRIPTION.isNotDistinctFrom(unitDescription))
-										   .and(UNITS.UNIT_ABBREVIATION.isNotDistinctFrom(unitAbbr))
-										   .fetchAny();
-
-				 if (!StringUtils.isEmpty(unitName) && unit == null)
-				 {
-					 unit = context.newRecord(UNITS);
-					 unit.setUnitName(unitName);
-					 unit.setUnitDescription(unitDescription);
-					 unit.setUnitAbbreviation(unitAbbr);
-					 unit.store();
-				 }
-
-				 PhenotypecategoriesRecord category = context.selectFrom(PHENOTYPECATEGORIES)
-															 .where(PHENOTYPECATEGORIES.NAME.isNotDistinctFrom(categoryString))
-															 .fetchAny();
-
-				 if (!StringUtils.isEmpty(categoryString) && category == null)
-				 {
-					 category = context.newRecord(PHENOTYPECATEGORIES);
-					 category.setName(categoryString);
-					 category.store();
-				 }
-
-				 TraitRestrictions restrictions = null;
-				 String categories = getCellValue(r, traitColumnNameToIndex.get("Trait categories (comma separated)"));
-				 String minimum = getCellValue(r, traitColumnNameToIndex.get("Min (only for numeric traits)"));
-				 String maximum = getCellValue(r, traitColumnNameToIndex.get("Max (only for numeric traits)"));
-
-				 if (!StringUtils.isEmpty(categories))
-				 {
-					 boolean valid = false;
-					 try
-					 {
-
-						 // Try to parse it
-						 String[][] cats = new Gson().fromJson(categories, String[][].class);
-
-						 if (cats != null && cats.length > 0)
-						 {
-							 restrictions = new TraitRestrictions();
-							 restrictions.setCategories(cats);
-							 valid = true;
-						 }
-					 }
-					 catch (JsonSyntaxException | NullPointerException e)
-					 {
-						 // Ignore, we're just checking validity here
-					 }
-
-					 if (!valid)
-					 {
-						 String[] cats = Arrays.stream(categories.split(",")).filter(c -> !StringUtils.isEmpty(c)).map(String::trim).toArray(String[]::new);
-
-						 if (cats.length > 1)
-						 {
-							 restrictions = new TraitRestrictions();
-							 restrictions.setCategories(new String[][]{cats});
-							 valid = true;
-						 }
-					 }
-
-					 if (!valid)
-						 addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_CATEGORIES, r.getRowNum(), "Trait categories: " + categories + " has invalid format.");
-				 }
-
-				 if (!StringUtils.isEmpty(minimum))
-				 {
-					 try
-					 {
-						 double min = Double.parseDouble(minimum);
-						 if (restrictions == null)
-							 restrictions = new TraitRestrictions();
-						 restrictions.setMin(min);
-					 }
-					 catch (NumberFormatException e)
-					 {
-						 addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Minimum isn't a valid number: " + minimum);
-					 }
-				 }
-
-				 if (!StringUtils.isEmpty(maximum))
-				 {
-					 try
-					 {
-						 double max = Double.parseDouble(maximum);
-						 if (restrictions == null)
-							 restrictions = new TraitRestrictions();
-						 restrictions.setMax(max);
-					 }
-					 catch (NumberFormatException e)
-					 {
-						 addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Maximum isn't a valid number: " + maximum);
-					 }
-				 }
-
-				 String setSizeString = getCellValue(r, traitColumnNameToIndex.get("Set Size"));
-				 String isTimeseriesString = getCellValue(r, traitColumnNameToIndex.get("Is timeseries"));
-				 Integer setSize = null;
-				 Boolean isTimeseries = false;
-
-				 if (!StringUtils.isEmpty(setSizeString))
-					 setSize = Integer.parseInt(setSizeString);
-				 if (!StringUtils.isEmpty(isTimeseriesString))
-				 {
-					 if (validPositiveBoolean.contains(isTimeseriesString))
-						 isTimeseries = true;
-					 else if (validNegativeBoolean.contains(isTimeseriesString))
-						 isTimeseries = false;
-				 }
-
-				 SelectConditionStep<PhenotypesRecord> query = context.selectFrom(PHENOTYPES)
-																	  .where(PHENOTYPES.NAME.isNotDistinctFrom(name))
-																	  .and(PHENOTYPES.DATATYPE.isNotDistinctFrom(dataType));
-
-				 if (unit != null)
-					 query.and(PHENOTYPES.UNIT_ID.isNotDistinctFrom(unit.getId()));
-				 if (!StringUtils.isEmpty(description))
-					 query.and(PHENOTYPES.DESCRIPTION.isNotDistinctFrom(description));
-				 if (!StringUtils.isEmpty(shortName))
-					 query.and(PHENOTYPES.SHORT_NAME.isNotDistinctFrom(shortName));
-				 if (category != null)
-					 query.and(PHENOTYPES.CATEGORY_ID.isNotDistinctFrom(category.getId()));
-
-//				 if (restrictions != null)
-//					 query.and(PHENOTYPES.RESTRICTIONS.isNotDistinctFrom(restrictions));
-
-				 List<PhenotypesRecord> potentialMatches = query.fetchInto(PhenotypesRecord.class);
-
-				 PhenotypesRecord match = null;
-
-				 if (!CollectionUtils.isEmpty(potentialMatches))
-					 match = findMatch(restrictions, potentialMatches);
-
-				 if (match != null)
-				 {
-					 // Just in case there is a match, but the restrictions changed, store them back
-					 match.store(PHENOTYPES.RESTRICTIONS);
-					 traitIds.add(match.getId());
-					 if (!StringUtils.isEmpty(match.getShortName()))
-						 traitNameToId.put(match.getShortName(), match.getId());
-					 traitNameToId.put(match.getName(), match.getId());
+					 scale.store();
 				 }
 				 else
 				 {
-					 PhenotypesRecord trait = context.newRecord(PHENOTYPES);
-					 trait.setName(name);
-					 trait.setShortName(shortName);
-					 trait.setDescription(description);
-					 trait.setDatatype(dataType);
-					 trait.setUnitId(unit == null ? null : unit.getId());
-					 trait.setCategoryId(category == null ? null : category.getId());
-					 trait.setRestrictions(restrictions);
-					 trait.setSetsize(setSize);
-					 trait.setIsTimeseries(isTimeseries);
-					 trait.store();
-
-					 traitIds.add(trait.getId());
-					 if (!StringUtils.isEmpty(trait.getShortName()))
-						 traitNameToId.put(trait.getShortName(), trait.getId());
-					 traitNameToId.put(trait.getName(), trait.getId());
+					 scale = bestMatch;
+					 scale.store(SCALES.RESTRICTIONS);
 				 }
+
+				 TraitcategoriesRecord category = context.selectFrom(TRAITCATEGORIES)
+				                                         .where(TRAITCATEGORIES.NAME.isNotDistinctFrom(container.getTraitCategoryName()))
+				                                         .fetchAny();
+
+				 if (!StringUtils.isEmpty(container.getTraitCategoryName()) && category == null)
+				 {
+					 category = context.newRecord(TRAITCATEGORIES);
+					 category.setName(container.getTraitCategoryName());
+					 category.store();
+				 }
+
+				 MethodsRecord method = context.selectFrom(METHODS)
+				                               .where(METHODS.NAME.isNotDistinctFrom(container.getMethodName()))
+				                               .and(METHODS.DESCRIPTION.isNotDistinctFrom(container.getMethodDescription()))
+				                               .and(METHODS.SETSIZE.isNotDistinctFrom(container.getMethodSetSize()))
+				                               .and(METHODS.IS_TIMESERIES.isNotDistinctFrom(container.getMethodIsTimeseries()))
+				                               .and(METHODS.METHOD_CLASS.isNotDistinctFrom(MethodsMethodClass.lookupLiteral(container.getMethodClass().getLiteral())))
+				                               .fetchAny();
+
+				 if (method == null)
+				 {
+					 method = context.newRecord(METHODS);
+					 method.setName(container.getMethodName());
+					 method.setDescription(container.getMethodDescription());
+					 method.setSetsize(container.getMethodSetSize());
+					 if (container.getMethodIsTimeseries() != null)
+					 	 method.setIsTimeseries(container.getMethodIsTimeseries());
+					 else
+						 method.setIsTimeseries(true);
+					 method.setMethodClass(MethodsMethodClass.lookupLiteral(container.getMethodClass().getLiteral()));
+					 method.store();
+				 }
+
+				 TraitsRecord trait = context.selectFrom(TRAITS)
+				                             .where(TRAITS.NAME.isNotDistinctFrom(container.getTraitName()))
+				                             .and(TRAITS.DESCRIPTION.isNotDistinctFrom(container.getTraitDescription()))
+				                             .and(TRAITS.ABBREVIATION.isNotDistinctFrom(container.getTraitAbbreviation()))
+				                             .and(TRAITS.SYNONYMS.isNotDistinctFrom(container.getTraitSynonyms()))
+				                             .and(TRAITS.TRAIT_CLASS.isNotDistinctFrom(TraitsTraitClass.lookupLiteral(container.getTraitClass().getLiteral())))
+				                             .and(TRAITS.TRAITCATEGORY_ID.isNotDistinctFrom(category != null ? category.getId() : null))
+				                             .fetchAny();
+
+				 if (trait == null)
+				 {
+					 trait = context.newRecord(TRAITS);
+					 trait.setName(container.getTraitName());
+					 trait.setDescription(container.getTraitDescription());
+					 trait.setAbbreviation(container.getTraitAbbreviation());
+					 trait.setSynonyms(container.getTraitSynonyms());
+					 trait.setTraitClass(TraitsTraitClass.lookupLiteral(container.getTraitClass().getLiteral()));
+					 trait.setTraitcategoryId(category != null ? category.getId() : null);
+					 trait.store();
+				 }
+
+				 VariablesRecord variable = context.selectFrom(VARIABLES)
+				                                   .where(VARIABLES.NAME.isNotDistinctFrom(container.getVariableName()))
+				                                   .and(VARIABLES.DESCRIPTION.isNotDistinctFrom(container.getVariableDescription()))
+				                                   .and(VARIABLES.SCALE_ID.isNotDistinctFrom(scale.getId()))
+				                                   .and(VARIABLES.TRAIT_ID.isNotDistinctFrom(trait.getId()))
+				                                   .and(VARIABLES.METHOD_ID.isNotDistinctFrom(method.getId()))
+				                                   .fetchAny();
+
+				 if (variable == null)
+				 {
+					 variable = context.newRecord(VARIABLES);
+					 variable.setName(container.getVariableName());
+					 variable.setDescription(container.getVariableDescription());
+					 variable.setTraitId(trait.getId());
+					 variable.setMethodId(method.getId());
+					 variable.setScaleId(scale.getId());
+					 variable.store();
+				 }
+
+				 container.setVariableId(variable.getId());
+				 container.setTraitId(trait.getId());
+				 container.setMethodId(method.getId());
+				 container.setScaleId(scale.getId());
+				 traitNameToId.put(variable.getName(), variable.getId());
 			 });
 		}
 		catch (IOException e)
@@ -1096,119 +1295,14 @@ public class TraitDataImporter extends DatasheetImporter
 		}
 	}
 
-	private PhenotypesRecord findMatch(TraitRestrictions restrictions, List<PhenotypesRecord> potentialMatches)
-	{
-		if (restrictions != null)
-		{
-			for (PhenotypesRecord p : potentialMatches)
-			{
-				if (p.getRestrictions() != null)
-				{
-					Double min = p.getRestrictions().getMin();
-					Double max = p.getRestrictions().getMax();
-
-					if (restrictions.getMin() != null)
-					{
-						if (min == null)
-							min = restrictions.getMin();
-						else
-							min = Math.min(min, restrictions.getMin());
-					}
-					if (restrictions.getMax() != null)
-					{
-						if (max == null)
-							max = restrictions.getMax();
-						else
-							max = Math.max(max, restrictions.getMax());
-					}
-
-					if (Objects.equals(p.getRestrictions().getMin(), restrictions.getMin())
-							&& Objects.equals(p.getRestrictions().getMax(), restrictions.getMax()))
-					{
-						if (p.getRestrictions().getCategories() == null && restrictions.getCategories() == null)
-						{
-							if (min != null && max != null)
-							{
-								p.getRestrictions().setMin(min);
-								p.getRestrictions().setMax(max);
-							}
-
-							return p;
-						}
-						else if (p.getRestrictions().getCategories() != null && restrictions.getCategories() != null)
-						{
-							if (p.getRestrictions().getCategories().length == restrictions.getCategories().length)
-							{
-								List<Set<String>> reference = new ArrayList<>();
-
-								int matchCount = 0;
-
-								for (String[] s : p.getRestrictions().getCategories())
-								{
-									Set<String> t = new HashSet<>();
-									for (String st : s)
-									{
-										t.add(st);
-									}
-									reference.add(t);
-								}
-
-								for (String[] s : p.getRestrictions().getCategories())
-								{
-									Set<String> t = new HashSet<>();
-									for (String st : s)
-									{
-										t.add(st);
-									}
-
-									for (Set<String> ref : reference)
-									{
-										Set<String> intersection = new HashSet<>(t);
-										intersection.retainAll(ref);
-
-										if (intersection.size() == t.size())
-										{
-											matchCount++;
-											break;
-										}
-									}
-								}
-
-								if (matchCount == p.getRestrictions().getCategories().length)
-								{
-									if (min != null && max != null)
-									{
-										p.getRestrictions().setMin(min);
-										p.getRestrictions().setMax(max);
-									}
-
-									return p;
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-		else
-		{
-			if (!potentialMatches.isEmpty())
-				return potentialMatches.get(0);
-			else
-				return null;
-		}
-
-		return null;
-	}
-
 	private void importData(DSLContext context, Sheet data, Sheet dates)
 	{
 		try
 		{
 			// Before we start, let's check the headers again to set the correct trait start index
 			data.openStream()
-				.findFirst()
-				.ifPresent(this::checkPredefinedHeaders);
+			    .findFirst()
+			    .ifPresent(this::checkPredefinedHeaders);
 
 			List<Row> dataRows = data.read();
 			List<Row> datesRows = null;
@@ -1298,8 +1392,8 @@ public class TraitDataImporter extends DatasheetImporter
 					if (StringUtils.isEmpty(name))
 						continue;
 
-					Integer traitId = traitNameToId.get(name);
-					Phenotypes trait = traitDefinitions.get(name);
+//					Integer traitId = traitNameToId.get(name);
+					ViewTableTraits trait = variableDefinitions.get(name);
 
 					String value = getCellValue(dataRow, c);
 
@@ -1312,7 +1406,7 @@ public class TraitDataImporter extends DatasheetImporter
 						date = getCellValueDate(datesRow, c);
 
 					// See if it's a date column, if so, get the actual date value, then reformat
-					if (trait.getDatatype() == PhenotypesDatatype.date)
+					if (trait.getScaleDatatype() == ViewTableTraitsScaleDatatype.date)
 					{
 						Date dateValue = getCellValueDate(dataRow, c);
 
@@ -1321,10 +1415,10 @@ public class TraitDataImporter extends DatasheetImporter
 					}
 
 					// See if we can match the value to its actual trait category restriction equivalent. This is used to map e.g. "2.0" to "2".
-					if (trait.getRestrictions() != null && trait.getRestrictions().getCategories() != null)
+					if (trait.getScaleRestrictions() != null && trait.getScaleRestrictions().getCategories() != null)
 					{
 						outer:
-						for (String[] categoryGroup : trait.getRestrictions().getCategories())
+						for (String[] categoryGroup : trait.getScaleRestrictions().getCategories())
 						{
 							for (String cat : categoryGroup)
 							{
@@ -1351,7 +1445,7 @@ public class TraitDataImporter extends DatasheetImporter
 
 					PhenotypedataRecord record = context.newRecord(PHENOTYPEDATA);
 					record.setTrialsetupId(rowToTrialsetupId.get(r));
-					record.setPhenotypeId(traitId);
+					record.setVariableId(trait.getVariableId());
 					record.setPhenotypeValue(value);
 					if (date != null)
 						record.setRecordingDate(new Timestamp(date.getTime()));
@@ -1361,7 +1455,7 @@ public class TraitDataImporter extends DatasheetImporter
 					if (newData.size() >= 10000)
 					{
 						context.batchStore(newData)
-							   .execute();
+						       .execute();
 						newData.clear();
 					}
 				}
@@ -1369,7 +1463,7 @@ public class TraitDataImporter extends DatasheetImporter
 				if (!newData.isEmpty())
 				{
 					context.batchStore(newData)
-						   .execute();
+					       .execute();
 					newData.clear();
 				}
 			}
@@ -1403,30 +1497,288 @@ public class TraitDataImporter extends DatasheetImporter
 		importJobStats.setGermplasm(germplasmIds.size());
 	}
 
-	private PhenotypesDatatype getDataType(String dt)
+	private ViewTableTraitsScaleDatatype getDataType(String dt)
 	{
-		PhenotypesDatatype result = null;
+		ViewTableTraitsScaleDatatype result = null;
 
 		if (Objects.equals(dt, "int") || Objects.equals(dt, "float") || Objects.equals(dt, "numeric"))
 		{
-			result = PhenotypesDatatype.numeric;
+			result = ViewTableTraitsScaleDatatype.numeric;
 		}
 		else if (Objects.equals(dt, "char") || Objects.equals(dt, "text"))
 		{
-			result = PhenotypesDatatype.text;
+			result = ViewTableTraitsScaleDatatype.text;
 		}
 		else if (Objects.equals(dt, "date"))
 		{
-			result = PhenotypesDatatype.date;
+			result = ViewTableTraitsScaleDatatype.date;
 		}
 		else if (Objects.equals(dt, "categorical"))
 		{
-			result = PhenotypesDatatype.categorical;
+			result = ViewTableTraitsScaleDatatype.categorical;
 		}
 
 		if (result == null)
 			throw new IllegalArgumentException();
 		else
 			return result;
+	}
+
+	private abstract class ImportBase
+	{
+		boolean legacy;
+		Integer dbId;
+		String  ontologyId;
+		String  name;
+		String  description;
+
+		public ImportBase(boolean legacy)
+		{
+			this.legacy = legacy;
+		}
+
+		public abstract void check(Row r, ViewTableTraits container);
+
+		protected void checkBase(Row r, String id)
+		{
+			if (StringUtils.isEmpty(name))
+				addImportResult(ImportStatus.GENERIC_MISSING_REQUIRED_VALUE, r.getRowNum(), id + ": " + name);
+			else if (name.length() > 255)
+				addImportResult(ImportStatus.GENERIC_VALUE_TOO_LONG, r.getRowNum(), id + ": " + name + " exceeds 255 characters.");
+		}
+	}
+
+	private class ImportVariable extends ImportBase
+	{
+		public ImportVariable(boolean legacy)
+		{
+			super(legacy);
+		}
+
+		@Override
+		public void check(Row r, ViewTableTraits container)
+		{
+			checkBase(r, legacy ? "Name" : "Variable name");
+			container.setVariableName(name);
+			container.setVariableDescription(description);
+		}
+	}
+
+	private class ImportTrait extends ImportBase
+	{
+		String abbreviation;
+		String clazz;
+		String category;
+
+		public ImportTrait(boolean legacy)
+		{
+			super(legacy);
+		}
+
+		@Override
+		public void check(Row r, ViewTableTraits container)
+		{
+			super.checkBase(r, legacy ? "Name" : "Trait name");
+
+			if (!StringUtils.isEmpty(abbreviation) && abbreviation.length() > 255)
+				addImportResult(ImportStatus.GENERIC_VALUE_TOO_LONG, r.getRowNum(), (legacy ? "Short Name: " : "Trait abbreviation: ") + abbreviation + " exceeds 255 characters.");
+
+			container.setTraitName(name);
+			container.setTraitDescription(description);
+			container.setTraitAbbreviation(abbreviation);
+			container.setTraitCategoryName(category);
+
+			if (!StringUtils.isEmpty(clazz))
+			{
+				try
+				{
+					container.setTraitClass(ViewTableTraitsTraitClass.valueOf(clazz));
+				}
+				catch (Exception e)
+				{
+					addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_CLASS, r.getRowNum(), (legacy ? "N/A: " : "Trait class: ") + clazz);
+				}
+			}
+			else
+			{
+				container.setTraitClass(ViewTableTraitsTraitClass.other);
+			}
+		}
+	}
+
+	private class ImportMethod extends ImportBase
+	{
+		String clazz;
+		String setSize;
+		String isTimeseries;
+
+		public ImportMethod(boolean legacy)
+		{
+			super(legacy);
+		}
+
+		@Override
+		public void check(Row r, ViewTableTraits container)
+		{
+			super.checkBase(r, legacy ? "N/A" : "Method name");
+
+			container.setMethodName(name);
+			container.setMethodDescription(description);
+
+			if (!StringUtils.isEmpty(clazz))
+			{
+				try
+				{
+					container.setMethodClass(ViewTableTraitsMethodClass.valueOf(clazz));
+				}
+				catch (Exception e)
+				{
+					addImportResult(ImportStatus.TRIALS_INVALID_METHOD_CLASS, r.getRowNum(), (legacy ? "N/A: " : "Method class: ") + clazz);
+				}
+			}
+			else
+			{
+				container.setMethodClass(ViewTableTraitsMethodClass.measurement);
+			}
+
+			if (!StringUtils.isEmpty(setSize))
+			{
+				try
+				{
+					container.setMethodSetSize(Integer.parseInt(setSize));
+				}
+				catch (NumberFormatException e)
+				{
+					addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Set size isn't a valid number: " + setSize);
+				}
+			}
+
+			if (!StringUtils.isEmpty(isTimeseries))
+			{
+				if (validPositiveBoolean.contains(isTimeseries.toLowerCase()))
+					container.setMethodIsTimeseries(true);
+				else if (validNegativeBoolean.contains(isTimeseries.toLowerCase()))
+					container.setMethodIsTimeseries(false);
+				else
+				{
+					container.setMethodIsTimeseries(true);
+					addImportResult(ImportStatus.GENERIC_INVALID_BOOLEAN, r.getRowNum(), "Is timeseries flag isn't a valid boolean: " + isTimeseries);
+				}
+			} else {
+				container.setMethodIsTimeseries(true);
+			}
+		}
+	}
+
+	private class ImportScale extends ImportBase
+	{
+		String unit;
+		String dataType;
+		String minimum;
+		String maximum;
+		String validValues;
+
+		public ImportScale(boolean legacy)
+		{
+			super(legacy);
+		}
+
+		@Override
+		public void check(Row r, ViewTableTraits container)
+		{
+			super.checkBase(r, legacy ? "Unit Name OR Name" : "Scale name");
+
+			container.setScaleName(name);
+			container.setScaleDescription(description);
+
+			if (!StringUtils.isEmpty(unit) && unit.length() > 255)
+				addImportResult(ImportStatus.GENERIC_VALUE_TOO_LONG, r.getRowNum(), (legacy ? "Unit Abbreviations OR Short Name: " : "Scale unit: ") + unit + " exceeds 255 characters.");
+
+			container.setScaleUnit(unit);
+
+			try
+			{
+				container.setScaleDatatype(getDataType(dataType));
+			}
+			catch (Exception e)
+			{
+				container.setScaleDatatype(ViewTableTraitsScaleDatatype.text);
+				addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_DATATYPE, r.getRowNum(), (legacy ? "Data Type: " : "Scale data Type: ") + dataType);
+			}
+
+			if (!StringUtils.isEmpty(validValues))
+			{
+				try
+				{
+					// Try to parse it
+					String[][] cats = new Gson().fromJson(validValues, String[][].class);
+
+					if (cats != null && cats.length > 1)
+					{
+						for (int i = 1; i < cats.length; i++)
+						{
+							if (cats[i - 1].length != cats[i].length)
+							{
+								addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_CATEGORIES, r.getRowNum(), (legacy ? "Trait categories (comma separated): " : "Trait categories: ") + validValues + " has invalid format.");
+							}
+						}
+					}
+
+					if (container.getScaleRestrictions() == null)
+						container.setScaleRestrictions(new TraitRestrictions());
+
+					container.getScaleRestrictions().setCategories(cats);
+				}
+				catch (JsonSyntaxException | NullPointerException e)
+				{
+					String[] cats = Arrays.stream(validValues.split(",")).filter(c -> !StringUtils.isEmpty(c)).map(String::trim).toArray(String[]::new);
+
+					if (cats.length > 1)
+					{
+						if (container.getScaleRestrictions() == null)
+							container.setScaleRestrictions(new TraitRestrictions());
+
+						container.getScaleRestrictions().setCategories(new String[][]{cats});
+					}
+					else
+					{
+						e.printStackTrace();
+						addImportResult(ImportStatus.TRIALS_INVALID_TRAIT_CATEGORIES, r.getRowNum(), (legacy ? "Trait categories (comma separated): " : "Trait categories: ") + validValues + " has invalid format.");
+					}
+				}
+			}
+
+			if (!StringUtils.isEmpty(minimum))
+			{
+				try
+				{
+					Double min = Double.parseDouble(minimum);
+					if (container.getScaleRestrictions() == null)
+						container.setScaleRestrictions(new TraitRestrictions());
+
+					container.getScaleRestrictions().setMin(min);
+				}
+				catch (NumberFormatException e)
+				{
+					addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Minimum isn't a valid number: " + minimum);
+				}
+			}
+
+			if (!StringUtils.isEmpty(maximum))
+			{
+				try
+				{
+					Double max = Double.parseDouble(maximum);
+					if (container.getScaleRestrictions() == null)
+						container.setScaleRestrictions(new TraitRestrictions());
+
+					container.getScaleRestrictions().setMax(max);
+				}
+				catch (NumberFormatException e)
+				{
+					addImportResult(ImportStatus.GENERIC_INVALID_NUMBER, r.getRowNum(), "Maximum isn't a valid number: " + maximum);
+				}
+			}
+		}
 	}
 }
